--- a/app/res/layout/main.xml
+++ b/app/res/layout/main.xml
@@ -7,6 +7,30 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:text="@string/welcome_normal" />
+
+    <FrameLayout
+        android:id="@+id/frameLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.40" >
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout1"
+            android:layout_width="match_parent"
+            android:layout_height="72dp" >
+
+            <Button
+                android:id="@+id/generate_button"
+                android:layout_width="218dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="14dp"
+                android:text="Generate map" />
+
+        </RelativeLayout>
+
+    </FrameLayout>
 
 </LinearLayout>
