Fix: menu icons. Added content to the spinners. Added menu to previewActivity.

--- a/app/res/layout/normal.xml
+++ b/app/res/layout/normal.xml
@@ -28,11 +28,13 @@
 
         <Spinner
             android:id="@+id/spinner1"
-            android:prompt="@string/radius"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/spinner3"
-            android:layout_alignParentLeft="true" >
+            android:layout_alignParentLeft="true"
+            android:prompt="@string/radius" >
+            <!-- Preview: listitem=@android:layout/simple_spinner_dropdown_item -->
+
         </Spinner>
 
         <TextView
