--- a/app/res/layout/preview.xml
+++ b/app/res/layout/preview.xml
@@ -20,6 +20,7 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
+            android:background="@drawable/custom_button"
             android:text="@string/start" />
 
         <Button
