--- a/app/res/layout/main.xml
+++ b/app/res/layout/main.xml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/RelativeLayoutMain1"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="bottom|top"
+    android:orientation="horizontal" >
 
-    <TextView
-        android:layout_width="fill_parent"
+    <RelativeLayout
+        android:id="@+id/relativeLayoutMain2"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true" >
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/mapMainLayout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/welcome_normal" />
+        android:layout_above="@+id/relativeLayoutMain2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true" >
 
-</LinearLayout>
+        <com.google.android.maps.MapView
+            android:id="@+id/mapviewMain"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:apiKey="0RUIqaVwf2_lIiBshPlEYfIGBXIJ4HDzaVZ2jdw"
+            android:clickable="true" />
+    </RelativeLayout>
+
+</RelativeLayout>
