--- a/app/res/layout/main.xml
+++ b/app/res/layout/main.xml
@@ -7,29 +7,41 @@
     android:orientation="horizontal" >
 
     <RelativeLayout
-        android:id="@+id/relativeLayoutMain2"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true" >
-
-    </RelativeLayout>
-
-    <RelativeLayout
         android:id="@+id/mapMainLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/relativeLayoutMain2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" >
+        android:layout_height="wrap_content" >
 
         <com.google.android.maps.MapView
             android:id="@+id/mapviewMain"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:apiKey="0RUIqaVwf2_lIiBshPlEYfIGBXIJ4HDzaVZ2jdw"
-            android:clickable="true" />
+            android:clickable="true" >
+        </com.google.android.maps.MapView>
+
+        <TextView
+            android:id="@+id/distance_to_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:text="@string/distance_to_p" />
+
+        <TextView
+            android:id="@+id/speed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/distance_to_point"
+            android:text="@string/speed" />
+
+        <TextView
+            android:id="@+id/total_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_below="@+id/speed"
+            android:text="@string/total_distance" />
     </RelativeLayout>
 
 </RelativeLayout>
