--- a/app/res/menu/menu.xml
+++ b/app/res/menu/menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
         <item android:id="@+id/options"
           android:title="@string/options"
-          android:icon="@drawable/ic_launcher"
+          android:icon="@drawable/settings_48"
          />
     <item android:id="@+id/help"
           android:title="@string/help" 
-          android:icon="@drawable/ic_launcher"/> 
+          android:icon="@drawable/magnifying_glass_48"/> 
 </menu> 
