--- a/app/res/drawable/custom_button.xml
+++ b/app/res/drawable/custom_button.xml
@@ -24,12 +24,12 @@
 	    <item android:state_focused="true" >
         <shape>
             <gradient
-                android:endColor="@color/orange"
+                android:endColor="@color/orange_faded"
                 android:startColor="@color/orange"
                 android:angle="270" />
             <stroke
-                android:width="3dp"
-                android:color="@color/black" />
+                android:width="1dp"
+                android:color="@color/orange_faded" />
             <corners
                 android:radius="3dp" />
             <padding
@@ -43,11 +43,11 @@
     <item>        
         <shape>
             <gradient
-                android:endColor="#9900ff00"
-                android:centerColor="#ff22ff22"
-                android:startColor="#ff00ff00"
+                android:endColor="@color/green_faded"
+                android:centerColor="@color/green_darker"
+                android:startColor="@color/green"
                 android:angle="270" />
-             <stroke android:width="1dp" android:color="#9900ff00" />>
+             <stroke android:width="1dp" android:color="@color/green_faded" />>
             <corners
                 android:radius="3dp" />
             <padding
