--- a/app/res/layout/summary.xml
+++ b/app/res/layout/summary.xml
@@ -8,12 +8,30 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:textSize="24dp"
         android:text="Summary" />
+
+    <TextView
+        android:id="@+id/summary_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16dp"
+        android:text="Total time: 
+Total distance: 
+Average speed: 
+No of flags: " />
 
     <RelativeLayout
         android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
         android:layout_height="280dp" >
+        
+                <com.google.android.maps.MapView
+            android:id="@+id/mapview_summary"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:apiKey="0RUIqaVwf2_lIiBshPlEYfIGBXIJ4HDzaVZ2jdw"
+            android:clickable="true" />
 
     </RelativeLayout>
 
@@ -22,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.40" >
-
+
         <RelativeLayout
             android:id="@+id/relativeLayout1"
             android:layout_width="match_parent"
@@ -34,7 +52,6 @@
                 android:layout_height="50dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="18dp"
                 android:text="Share" />
 
             <Button
