--- a/app/res/layout/normal.xml
+++ b/app/res/layout/normal.xml
@@ -16,7 +16,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true" />
+            android:layout_centerVertical="true"
+            android:prompt="@string/distance" />
 
         <Spinner
             android:id="@+id/spinner3"
@@ -24,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/spinner2"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true" />
+            android:layout_alignParentRight="true"
+            android:prompt="@string/flags" />
 
         <Spinner
             android:id="@+id/spinner1"
