--- a/app/res/layout/summary.xml
+++ b/app/res/layout/summary.xml
@@ -8,39 +8,38 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:textSize="24dp"
-        android:text="Summary" />
-
+        android:text="Summary"
+        android:textSize="24dp" />
+
     <TextView
         android:id="@+id/summary_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16dp"
         android:text="Total time: 
-Total distance: 
-Average speed: 
-No of flags: " />
-
+		Total distance: 
+		Average speed: 
+		No of flags: "
+        android:textSize="16dp" />
+
     <RelativeLayout
         android:id="@+id/relativeLayout2"
         android:layout_width="match_parent"
         android:layout_height="280dp" >
-        
-                <com.google.android.maps.MapView
+
+        <com.google.android.maps.MapView
             android:id="@+id/mapview_summary"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:apiKey="0RUIqaVwf2_lIiBshPlEYfIGBXIJ4HDzaVZ2jdw"
             android:clickable="true" />
-
     </RelativeLayout>
-
+
     <FrameLayout
         android:id="@+id/frameLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.40" >
-
+
         <RelativeLayout
             android:id="@+id/relativeLayout1"
             android:layout_width="match_parent"
@@ -61,9 +60,7 @@ No of flags: " />
                 android:layout_alignLeft="@+id/share_button"
                 android:layout_below="@+id/share_button"
                 android:text="Menu" />
-
         </RelativeLayout>
-
     </FrameLayout>
 
 </LinearLayout>
