--- a/app/res/layout/help.xml
+++ b/app/res/layout/help.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:padding="10dip"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    >
 
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="61dp"
-        android:layout_marginTop="120dp"
-        android:inputType="textMultiLine" 
-        android:text="Some text will be displayed here!">
+        android:layout_marginTop="10dip"
+        android:text="Test Pop-Up"
+    />
 
-        <requestFocus />
-    </EditText>
-
-
-</RelativeLayout>
+</LinearLayout>
