--- a/app/res/layout/help.xml
+++ b/app/res/layout/help.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+ android:layout_width="wrap_content" 
+ android:layout_height="wrap_content">
+ 
+ <TextView android:text="@+id/Text" 
+    android:id="@+id/Text"
+ 	android:layout_width="wrap_content" 
+ 	android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="61dp"
-        android:layout_marginTop="120dp"
-        android:inputType="textMultiLine" 
-        android:text="Some text will be displayed here!">
-
-        <requestFocus />
-    </EditText>
-
-
+ 
+ <Button android:id="@+id/cancel" 
+    android:layout_below="@id/Text"
+ 	android:layout_width="wrap_content" 
+ 	android:layout_height="wrap_content"
+ 	android:layout_centerHorizontal="true" 
+ 	android:text="Cancel" />
+ 
 </RelativeLayout>
