--- a/app/res/layout/preview.xml
+++ b/app/res/layout/preview.xml
@@ -68,6 +68,17 @@
             android:layout_below="@+id/checkpoint"
             android:text="Summary" />
 
+        <Chronometer
+            android:id="@+id/chronometer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="28dp"
+            android:textColor="@color/black"
+            android:visibility = "gone"
+            android:text="Chronometer" />
+
     </RelativeLayout>
 
     <LinearLayout
