--- a/app/res/layout/normal.xml
+++ b/app/res/layout/normal.xml
@@ -28,16 +28,6 @@
             android:text="@string/normal_mode"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <Button
-            android:id="@+id/generate_map_button"
-            android:layout_width="130dp"
-            android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="38dp"
-            android:background="@drawable/custom_button"
-            android:text="Generate Map" />
-
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
@@ -79,7 +69,17 @@
             android:layout_alignParentLeft="true"
             android:text="Set max range of a spawning flag" />
 
-
+        <Button
+            android:id="@+id/generate_map_button"
+            android:layout_width="210dp"
+            android:layout_height="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="40dp"
+            android:background="@drawable/custom_button"
+            android:text="Generate Map"
+            android:textStyle="bold"
+            android:textSize="18dp" />
 
     </RelativeLayout>
 
