--- a/app/res/layout/main.xml
+++ b/app/res/layout/main.xml
@@ -42,6 +42,33 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/speed"
             android:text="@string/total_distance" />
+
+        <Chronometer
+            android:id="@+id/chronometer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="28dp"
+            android:text="Chronometer"
+            android:textColor="@color/black" />
+
+        <Button
+            android:id="@+id/summary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/checkpoint"
+            android:text="Summary" />
+
+        <Button
+            android:id="@+id/checkpoint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:text="Checkpoint" />
+
     </RelativeLayout>
 
 </RelativeLayout>
