--- a/app/res/menu/menu.xml
+++ b/app/res/menu/menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-        <item android:id="@+id/options"
-          android:title="@string/options"
-          android:icon="@drawable/settings_48"
+        <item android:id="@+id/about"
+          android:title="@string/about"
+          android:icon="@drawable/plan_48"
          />
     <item android:id="@+id/help"
           android:title="@string/help" 
