--- a/app/res/layout/main.xml
+++ b/app/res/layout/main.xml
@@ -17,6 +17,15 @@
             android:layout_height="fill_parent"
             android:apiKey="01OR_IsAMACZCH-mysHjZxDFqplmDnq8x__4FQw"
             android:clickable="true" >
+
+            <!--
+            emulator-key
+            android:apiKey="01OR_IsAMACZCH-mysHjZxDFqplmDnq8x__4FQw"
+            
+            private-key
+            android:apiKey="01OR_IsAMACagn-B9fS7Hd-vKsQvdSsm9zYLv7Q"
+            -->
+
         </com.google.android.maps.MapView>
 
         <TextView
@@ -25,26 +34,26 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:textColor="@color/black"
-            android:text="@string/distance_to_p" />
+            android:text="@string/distance_to_p"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/speed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:textColor="@color/black"
             android:layout_below="@+id/distance_to_point"
-            android:text="@string/speed" />
+            android:text="@string/speed"
+            android:textColor="@color/black" />
 
         <TextView
             android:id="@+id/total_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:textColor="@color/black"
             android:layout_below="@+id/speed"
-            android:text="@string/total_distance" />
+            android:text="@string/total_distance"
+            android:textColor="@color/black" />
 
         <Chronometer
             android:id="@+id/chronometer"
@@ -71,7 +80,6 @@
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
             android:text="Checkpoint" />
-
     </RelativeLayout>
 
 </RelativeLayout>
